--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -1,11 +1,12 @@
 @article{assmann-katz2005,
   title = {Synthesis Fidelity and Time-Varying Spectral Change in Vowels},
-  author = {Assmann, Peter F and Katz, G S},
+  author = {Assmann, Peter F and Katz, William F},
   year = {2005},
   journal = {Journal of the Acoustical Society of America},
   volume = {117},
   number = {2},
-  pages = {886--895}
+  pages = {886--895},
+  doi = {10.1121/1.1852549}
 }
 
 @article{barreda-nearey2012,
@@ -69,6 +70,7 @@
   author = {Behne, Dawn M and Czigler, Peter E and Sullivan, Kirk P H},
   year = {1997},
   journal = {Reports from the Department of Phonetics, Ume\aa{} University},
+  address = {Ume\aa{}},
   volume = {4},
   pages = {81--83},
   abstract = {This project re-examines the perceptual weight of vowel duration and the first two vowel formant frequencies in distinguishing phonologically short and long vowels in Swedish. Based on listeners' responses to synthesized sets of materials for [I]-[i[O]],-[oan]d [a]-[A ], results indicate that vowel duration is of primary importance for distinguishing [I]from [i ] and [O]from [o ]w,hereas both formant frequencies and vowel duration were found to influence the perception of [a] from [A ].},
@@ -88,10 +90,10 @@
 }
 
 @book{bleckert1987,
-  title = {Centralsvensk diftongering som satsfonetiskt problem},
+  title = {Centralsvensk diftongering som satsfonetiskt problem {[Diphthongization in Central Swedish as a problem of sentence phonetics]}},
   author = {Bleckert, Lars},
   year = {1987},
-  series = {Skrifter Utgivna Av {{Institutionen}} F\"or Nordiska Spr\aa k Vid {{Uppsala}} Universitet},
+  publisher = {Skrifter Utgivna Av {{Institutionen}} F\"or Nordiska Spr\aa k Vid {{Uppsala}} Universitet},
   number = {21},
   address = {{Uppsala}}
 }
@@ -198,7 +200,7 @@
 }
 
 @article{elert1980,
-  title={Diftongeringar och konsonantinslag: Drag i uttalet av l{\aa}nga vokaler i svenskan av i dag [Diphthongizations and consonantal offglides: Traits in the pronunciation of long vowels in the Swedish of today]},
+  title={Diftongeringar och konsonantinslag: Drag i uttalet av l{\aa}nga vokaler i svenskan av i dag {[Diphthongizations and consonantal offglides: Traits in the pronunciation of long vowels in the Swedish of today]}},
   author={Elert, Claes-Christian},
   journal={Spr{\aa}ken i v{\aa}rt spr{\aa}k},
   pages={168--181},
@@ -206,7 +208,7 @@
 }
 
 @book{elert1981,
-  title = {Ljud Och Ord i Svenskan},
+  title = {Ljud Och Ord i Svenskan {[Sounds and words in Swedish language]}},
   author = {Elert, Claes-Christian},
   year = {1981},
   series = {Acta {{Universitatis Umensis}}},
@@ -219,7 +221,7 @@
 }
 
 @incollection{elert1994,
-  title = {Indelning Och Gr\"anser Inom Omr\aa det F\"or Den Talade Svenskan: {{En}} Aktuell Dialektografi},
+  title = {Indelning Och Gr\"anser Inom Omr\aa det F\"or Den Talade Svenskan: {{En}} Aktuell Dialektografi {[Distribution and boundaries within the area of spoken Swedish: An up-to-date dialectography]}},
   booktitle = {Kulturgr\"anser - Myt Eller Verklighet?},
   author = {Elert, Claes-Christian},
   year = {1994},
@@ -230,7 +232,7 @@
 }
 
 @book{elert2000,
-  title = {{Allm\"an och svensk fonetik}},
+  title = {{Allm\"an och svensk fonetik} {[General and Swedish phonetics]}},
   author = {Elert, Claes-Christian},
   year = {2000},
   edition = {8., omarb. uppl},
@@ -241,9 +243,10 @@
 }
 
 @article{eliasson2000,
-  title = {Typologiska Och Areallingvistiska Aspekter P\aa{} de Nordeuropeiska Spr\aa kens Fonologi},
+  title = {Typologiska Och Areallingvistiska Aspekter P\aa{} de Nordeuropeiska Spr\aa kens Fonologi {[Typological and area linguistic aspects of the phonology of the Northern European languages]}},
   author = {Eliasson, Stig},
   year = {2000},
+  pages = {21--70},
   month = jan,
   journal = {In: Ernst H\aa kon Jahr (ed.), Spr\aa kkontakt \textemdash{} Innverknaden fr\aa{} nedertysk p\aa{} andre nordeuropeiske spr\aa k, 21\textendash 70. (Nord 2000:19.) K\o benhavn: Nordisk Ministerr\aa d, 2000},
   file = {/Users/anpe7128/Zotero/storage/RYV9A9ZC/Eliasson - 2000 - Typologiska och areallingvistiska aspekter på de n.pdf}
@@ -278,7 +281,7 @@
 
 @book{engstrand2004,
   author = {Engstrand, Olle},
-  title = {Fonetikens grunder},
+  title = {Fonetikens grunder {[The basics of phonetics]}},
   publisher = {Studentlitteratur},
   address = {Lund},
   year = {2004},
@@ -287,7 +290,7 @@
 }
 
 @article{engstrand2000,
-  title = {{Hur udda \"ar Viby-i? Experimentella och typologiska observationer}},
+  title = {{Hur udda \"ar Viby-i? Experimentella och typologiska observationer} {[How peculiar is Viby-i? Experimental and typoligical observations]}},
   author = {Engstrand, Olle and Bj{\"o}rsten, Sven and Lindblom, Bj{\"o}rn and Bruce, G{\"o}sta and Eriksson, Anders},
   year = {2000},
   journal = {Folkm\aa lsstudier},
@@ -450,7 +453,7 @@
 
 
 @article{hammarstrom-norman1957,
-  title = {Om den frikativa slutfasen vid de svenska l{\aa}nga vokalerna i, y, u, w.},
+  title = {Om den frikativa slutfasen vid de svenska l{\aa}nga vokalerna i, y, u, w.{[On the final fricative phase in the Swedish long vowels i, y, u, w.]}},
   author = {G Hammarstr{\"o}m and L. Norman},
   journal={Nordisk tidsskrift for tale og stemme},
   volume = {17},
@@ -501,12 +504,12 @@
 }
 
 @article{hillenbrand2001,
-    author = {Hillenbrand, James M. and Clark, Michael J. and Nearey, Terrance M.},
+    author = {Hillenbrand, James M and Clark, Michael J. and Nearey, Terrance M},
     title = "{Effects of consonant environment on vowel formant patterns}",
     journal = {The Journal of the Acoustical Society of America},
     volume = {109},
     number = {2},
-    pages = {748-763},
+    pages = {748--763},
     year = {2001},
     month = {02},
     abstract = "{A significant body of evidence has accumulated indicating that vowel identification is influenced by spectral change patterns. For example, a large-scale study of vowel formant patterns showed substantial improvements in category separability when a pattern classifier was trained on multiple samples of the formant pattern rather than a single sample at steady state [J. Hillenbrand et al., J. Acoust. Soc. Am. 97, 3099–3111 (1995)]. However, in the earlier study all utterances were recorded in a constant /hVd/ environment. The main purpose of the present study was to determine whether a close relationship between vowel identity and spectral change patterns is maintained when the consonant environment is allowed to vary. Recordings were made of six men and six women producing eight vowels (/i,ɪ,ɛ,æ,ɑ,ᴜ,u,ʌ/) in isolation and in CVC syllables. The CVC utterances consisted of all combinations of seven initial consonants (/h,b,d,g,p,t,k/) and six final consonants (/b,d,g,p,t,k/). Formant frequencies for F1–F3 were measured every 5 ms during the vowel using an interactive editing tool. Results showed highly significant effects of phonetic environment. As with an earlier study of this type, particularly large shifts in formant patterns were seen for rounded vowels in alveolar environments [K. Stevens and A. House, J. Speech Hear. Res. 6, 111–128 (1963)]. Despite these context effects, substantial improvements in category separability were observed when a pattern classifier incorporated spectral change information. Modeling work showed that many aspects of listener behavior could be accounted for by a fairly simple pattern classifier incorporating F0, duration, and two discrete samples of the formant pattern.}",
@@ -602,7 +605,7 @@
 }
 
 @book{kotsinas1995,
-  title = {Dialekt},
+  title = {Dialekt {[Dialect]}},
   author = {Kotsinas, Ulla-Britt},
   year = {1995},
   series = {Nationalencyklopedin},
@@ -623,7 +626,7 @@
 }
 
 @book{kuronen2000,
-  title = {{Vokaluttalets akustik i sverigesvenska, finlandssvenska och finska}},
+  title = {{Vokaluttalets akustik i sverigesvenska, finlandssvenska och finska {[The acoustics of vowel pronunciation in Sweden Swedish, Finland Swedish and Finnish]}}},
   author = {Kuronen, Mikko},
   year = {2000},
   series = {{Studia philologica Jyv\"askyl\"aensia}},
@@ -658,7 +661,7 @@
 
 @article{Ladefoged1957,
   title = {Information Conveyed by Vowels},
-  author = {Ladefoged, P and Broadbent, D E},
+  author = {Ladefoged, Peter and Broadbent, Donald E},
   year = {1957},
   journal = {Journal of the Acoustical Society of America},
   volume = {29},
@@ -666,9 +669,9 @@
 }
 
 @inproceedings{leinonen1982,
-  title = {Rikssvenskt och finlandssvenskt ljudsystem ur perceptionssynpunkt},
+  title = {Rikssvenskt och finlandssvenskt ljudsystem ur perceptionssynpunkt {[Perceptual perspectives on the sound systems of Standard Swedish and Finland Swedish]}},
   booktitle = {X Fonetiikan p{\"a}iv{\"a}t},
-  author = {Leinonen, K. and Pitk{\"a}nen, A. J., and Vihanta, V. V.},
+  author = {Leinonen, Kari and Pitk{\"a}nen, Antti J., and Vihanta, Veijo V.},
   year = {1981},
   volume = {TaYSYLJ 7},
   pages = {163--218},
@@ -689,7 +692,7 @@
 
 @book{lindblom1963,
   title = {On vowel reduction},
-  author = {Lindblom, B},
+  author = {Lindblom, Bj{\"o}rn},
   year = {1963},
   series = {Uppsala University},
   note={Lic.avh. Uppsala : Univ.},
@@ -698,7 +701,7 @@
 
 @article{lindblom1968,
   title = {Temporal Organization of Syllable Production},
-  author = {Lindblom, B},
+  author = {Lindblom, Bj{\"o}rn},
   year = {1968},
   journal = {STL-QPSR},
   volume = {9},
@@ -735,7 +738,7 @@
 
 @article{mcallister1974,
   title = {An {{EMG}} Study of Some Characteristics of the {{Swedish}} Rounded Vowels},
-  author = {McAllister, R. and Lubker, J. and Carlson, J.},
+  author = {McAllister, Robert and Lubker, James and Carlson, Johann},
   year = {1974},
   month = oct,
   journal = {Journal of Phonetics},
@@ -791,7 +794,7 @@
 
 @article{nordstrand2004,
   title = {Measurements of Articulatory Variation in Expressive Speech for a Set of {{Swedish}} Vowels},
-  author = {Nordstrand, M. and Svanfeldt, G. and Granstr{\"o}m, B. and House, D.},
+  author = {Nordstrand, Magnus and Svanfeldt, Gunilla and Granstr{\"o}m, Bj{\"o}rn and House, David},
   year = {2004},
   month = oct,
   journal = {Speech Communication},
@@ -825,6 +828,7 @@
   year = {2023},
   journal = {Frontiers in Psychology},
   volume = {14},
+  pages = {01--21},
   URL = {https://www.frontiersin.org/articles/10.3389/fpsyg.2023.1165742},
   doi = {10.3389/fpsyg.2023.1165742},
   issn={1664-1078},
@@ -833,7 +837,8 @@
 @manuscript{persson2024,
   title = {Comparing accounts of formant normalization against US English listeners' vowel perception},
   author = {Persson, Anna and Barreda, Santiago and Jaeger, T Florian},
-  year = {2024}
+  year = {2024},
+  publisher = {manuscript; Stockholm University}
 }
 
 @article{Peterson1952,
@@ -864,7 +869,7 @@
 }
 
 @article{pycha2016,
-  author = {Anne Pycha},
+  author = {Pycha, Anne},
   title ={Co-articulatory Cues for Communication: An Investigation of Five Environments},
   journal = {Language and Speech},
   volume = {59},
@@ -1006,11 +1011,12 @@ year = {2018}
 
 @article{stevens-schiel2019,
   title = {Associating the origin and spread of sound change using agent-based modelling applied to /s/-retraction in {{English}}},
-  author = {Stevens, M. and Harrington, J. and Schiel, F.},
+  author = {Stevens, Mary and Harrington, Jonathan and Schiel, Florian},
   year = {2019},
   journal = {Glossa: a journal of general linguistics},
   volume = {4},
   number = {1},
+  pages = {01-30},
   doi = {10.5334/gjgl.620}
 }
 
@@ -1066,7 +1072,7 @@ year = {2018}
 @article{sussman1997,
   title = {An Investigation of Stop Place of Articulation as a Function of Syllable Position: A Locus Equation Perspective},
   shorttitle = {An Investigation of Stop Place of Articulation as a Function of Syllable Position},
-  author = {Sussman, H. M. and Bessell, N. and Dalston, E. and Majors, T.},
+  author = {Sussman, Harvey M. and Bessell, Nicola and Dalston, Eileen and Majors, Tivoli},
   year = {1997},
   month = may,
   journal = {The Journal of the Acoustical Society of America},
@@ -1143,7 +1149,7 @@ year = {2018}
 }
 
 @book{wenner2010,
-  title = {N\"ar L\"ognare Blir Lugnare},
+  title = {N\"ar L\"ognare Blir Lugnare. En sociofonetisk studie av sammanfallet mellan kort \"o och kort u i uppl\"andskan {[When lögnare become lugnare. A sociophonetic study of the merger between short \"o and short u in Uppland Swedish]}},
   author = {Wenner, Lena},
   year = {2010},
   publisher = {Uppsala Universitet},
@@ -1157,6 +1163,7 @@ year = {2018}
   author = {Xie, Xin and Jaeger, T Florian and Kurumada, Chigusa},
   year = {2023},
   journal = {Cortex},
+  pages = {377-424},
   publisher = {{Open Science Framework}},
   urldate = {2023-05-17},
   abstract = {This project adopts computational approaches to explore mechanisms underlying exposure-driven changes of speech perception.},
