--- a/output/papers/Swehvd-acoustics.Rmd
+++ b/output/papers/Swehvd-acoustics.Rmd
@@ -467,20 +467,26 @@ p
 ```
 
 #### Static acoustic analysis
-The static analysis of SwehVd presents formant measurements at the steady state of the vowel, by averaging across the three mid-points.^[The choice of time-point for extracting formants, or whether to average across several time-points, affects the acoustic characterizations given how formants move across the vowel segment. The SI presents evaluations of the effect of different measurement points. For increased comparability across studies in this paper, the steady state of the vowel was selected for both studies.] It investigates where in the acoustic space categories fall, and evaluates the relative contribution of F0, F1, F2, F3 and duration to the distinction of vowels. This is done using visualizations of cues and cue correlations. In addition, a category separability index is employed to evaluate... 
+The static analysis of SwehVd presents formant measurements at the steady state of the vowel, by averaging across the three mid-points.^[The choice of time-point for extracting formants, or whether to average across several time-points, affects the acoustic characterizations given how formants move across the vowel segment. The SI presents evaluations of the effect of different measurement points. For increased comparability across studies in this paper, the steady state of the vowel was selected for both studies.] It investigates where in the acoustic space categories fall, and evaluates the relative contribution of F0, F1, F2, F3 and duration to the distinction of vowels. This is done using visualizations of cues and cue correlations. 
 
-Following work by @wedel2018 and @xie-jaeger2020, each vowel's separability from the neighboring category was calculated as the average distance of vowel tokens to the centroid of the neighboring category, operationalized as \@ref(eq:category-separability). Each talker's category centres were calculated for the cue dimension in question (F1-F2, F1-F2-F3). Next, the distance between each token from that talker to the category center of the neighboring vowel from that talker was calculated. Finally, the category separability was averaged across all tokens from a talker, resulting in a separability measure for that vowel and talker.
+In order to evaluate the hypothesized importance of lip-rounding (F3) for neighboring unrounded and rounded categories, a category separability index was employed. The separability index was calculated on F1-F2 and subsequently compared against a separability index calculated on F1-F2-F3 to assess whether including F3 would increase category separability. The category separability index provides a relatively straightforward parametric measure of distances between categories in the acoustic space, however, without making assumptions about perception. The contrasts investigated were [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("eː")`] - [`r linguisticsdown::cond_cmpl("yː")`], [`r linguisticsdown::cond_cmpl("ɪ")`] - [`r linguisticsdown::cond_cmpl("ʏ")`], [`r linguisticsdown::cond_cmpl("yː")`] - [`r linguisticsdown::cond_cmpl("ʉː")`], [`r linguisticsdown::cond_cmpl("oː")`] - [`r linguisticsdown::cond_cmpl("uː")`] and [`r linguisticsdown::cond_cmpl("ɔ")`] - [`r linguisticsdown::cond_cmpl("ʊ")`].
+
+Following work by @wedel2018 and @xie-jaeger2020, each vowel's separability from the neighboring vowel was calculated as the average distance of vowel tokens to the centroid of the neighboring vowel, operationalized as \@ref(eq:category-separability). For the [`r linguisticsdown::cond_cmpl("iː")`] - [`r linguisticsdown::cond_cmpl("yː")`] contrast, for instance, first, each talker's [`r linguisticsdown::cond_cmpl("yː")`] center was calculated for F1-F2. Next, the distances between each [`r linguisticsdown::cond_cmpl("iː")`] token to the neighboring [`r linguisticsdown::cond_cmpl("yː")`] center from the same talker were calculated for F1-F2. Finally, the distances were averaged across all [`r linguisticsdown::cond_cmpl("iː")`] tokens from a talker, resulting in a separability measure for that vowel and talker. The same was done for F1-F2-F3. These two measures of separability for each contrast were then compared to assess whether including F3 would lead to increased separability.
 
 \begin{equation}
  separability \ of /`r linguisticsdown::cond_cmpl("yː")`/ from /`r linguisticsdown::cond_cmpl("iː")`/ = \frac{\sum\limits_{k=1}^{n} \sqrt{(F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/} - F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/})^2 + (F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/} - F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/})^2}}{n} (\#eq:category-separability)
 \end{equation}
 
-Category separability indices have been used in previous work as a means of... It provides a relatively straightforward parametric measure of...but makes no assumptions about perception. Category separability however assumes Gaussian distributions...
-
 To obtain a measure of the magnitude of effect, a linear mixed-effects model (LMM) was fit, comparing the separability indices obtained assuming different cue dimensions. The LMM thus predicted the separability index from category and cue dimension and their interaction, with talkers as random effect. The \texttt{lmer()} function from the \texttt{R} package \texttt{lme4} was used. Example of model code: $separability \sim category * cues + (1|Talker)$. Cue dimension was sum-coded (F1-F2 = 1, F1-F2-F3 = -1).
 
 #### Dynamic acoustic analysis
-The dynamic analysis is divided into two main sections that both use formant measurements at all five time-points to assess the importance of formant dynamics for vowel distinctions. In the first section, formant trajectory plots were used to assess the scope and direction of movements and to what extent vowels seem to diphthongize or merely display formant movements. The trajectory plots were also used to evaluate whether category overlap is reduced once trajectories are considered. This part of the analysis was also supplemented with category separability index for neighboring categories assessing whether indices that could account for information at each time-point would increase separability. And for each vowel within a vowel pair? <!--add here--> These analyses assessed previously reported results on diphthongization in the long vowels [e.g., @pelzer-boersma2109; @kuronen2000], and explored trajectories in the short vowels while evaluating the same hypotheses as in the static analysis.<!--change this--> 
+The dynamic analysis is divided into two main sections that both use formant measurements at all five time-points to assess the importance of formant dynamics for vowel distinctions. In the first section, formant trajectory plots were used to assess the scope and direction of movements and to what extent vowels seem to diphthongize or merely display formant movements. The trajectory plots were also used to evaluate whether category overlap is reduced once trajectories are considered. This part of the analysis was also supplemented with category separability index for neighboring categories assessing whether indices that could account for information at each time-point would increase separability. The F1-F2 category separability measure obtained in the static analysis was compared against an 'omnibus'  separability measure that calculated the separability index at each of the five time-points and subsequently averaged across to a single measure. The equation \@ref(eq:category-separability) was modified to \@ref(eq:category-separability-traj):
+
+\begin{equation}
+ separability \ of /`r linguisticsdown::cond_cmpl("yː")`/ from /`r linguisticsdown::cond_cmpl("iː")`/ = \frac{\sum\limits_{k=1}^{n} \sqrt{(\mu(F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t1},F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t2},F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t3},F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t4},F1_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t5}) - \mu(F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t1},F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t2},F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t3},F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t4},F1_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t5}))^2 + (\mu(F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t1},F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t2},F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t3},F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t4},F2_{token \ k \ of /`r linguisticsdown::cond_cmpl("yː")`/}^{t5}) - \mu(F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t1},F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t2},F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t3},F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t4},F2_{Center \ of /`r linguisticsdown::cond_cmpl("iː")`/}^{t5}))^2}}{n} (\#eq:category-separability-traj)
+\end{equation}
+
+These analyses assessed previously reported results on diphthongization in the long vowels [e.g., @pelzer-boersma2109; @kuronen2000], and explored trajectories in the short vowels while evaluating the same hypotheses as in the static analysis.<!--change this--> 
 
 In the second part of the dynamic analysis, the hypothesized contribution of formant dynamics to category information was modeled using generalized additive mixed-effects models (GAMMs) [@baayen2017]. GAMMs were employed to assess the relative contribution of each cue to category distinctions once formant dynamics was considered, while also accounting for by-talker variability. This type of model has not only a temporal structure (formant measurements at different time-points), but also a hierarchical structure, as individual measurements were grouped into formant contours that in turn were grouped by talkers and gender. Both the complex dependencies generated by this structure as well as the non-monotonic behavior of formants, cannot easily be captured by traditional parametric methods, such as linear regression [e.g., @soskuthy2021]. GAMMs can accommodate nonlinear relationships between predictors and response variables, and their use of smooth functions can provide more nuanced representations of these relationships. Much like other types of mixed models, GAMMs allow for the inclusion of random effects, which provides a parsimonious way to account for dependencies in grouped data. 
 
@@ -704,118 +710,106 @@ Three general observations can be made from Figure \@ref(fig:cat-sep-F3). Catego
 Separate linear mixed-effects models (LMMs) were fit to analyse the by-talker by-category separability for each of the pairs, with category, cue dimension and their interaction as fixed-effect predictors, and Talker as random effect. All LMMs indicated a main effect of cue dimension, with category separability increasing with the added cue (all $ps < .003$).
 
 ```{r}
-#Try to calculate the category separability based on Xie & Jaeger 2020
+#Calculate the category separability based on Xie & Jaeger 2020
 get_category_separability <- function(
     data,
+    data_means,
     category_A, 
-    category_B,
-    n = length(data$category[data$category == category_A])) {
-  data %>%
-    group_by(Talker, category) %>%
+    category_B) {
+  data %>% 
+    filter(Normalization.Type == "Nearey's uniform scaling (log)", category == category_A) %>%
+    left_join(data_means %>% 
+                filter(category == category_B),
+              by = "Talker") %>%
+     rename(category = category.x, mean_category = category.y) %>%
+    group_by(Talker) %>%
     mutate(
-      category_separability_F1 = ifelse(category == category_A, (F1 - data[data$category == category_B,]$F1_centroid)^2, NA),
-      category_separability_F2 = ifelse(category == category_A, (F2 - data[data$category == category_B,]$F2_centroid)^2, NA),
-      category_separability_F3 = ifelse(category == category_A, (F3 - data[data$category == category_B,]$F3_centroid)^2, NA)) %>%
-    na.omit() %>%
-    group_by(Talker, category) %>%
-    mutate(
-      separability_F1F2 = sum(sqrt(category_separability_F1 + category_separability_F2), na.rm = T) / n,
-      separability_F1F2F3 = sum(sqrt(category_separability_F1 + category_separability_F2 + category_separability_F3), na.rm = T) /n)
+      category_separabilityF1F2 = sum(sqrt((F1 - F1_mean)^2 + (F2 - F2_mean)^2)) / n(),
+      category_separabilityF1F2F3 = sum(sqrt((F1 - F1_mean)^2 + (F2 - F2_mean)^2) + (F3 - F3_mean)^2) / n())
 }
+
+d.SwehVd.centroids <- d.SwehVd.forStudy.long.static %>% 
+      filter(Normalization.Type == "Nearey's uniform scaling (log)") %>%
+      group_by(Talker, category) %>%
+      summarise(across(starts_with("F"), ~ mean(.x), .names = '{col}_mean'))
 
 # Calculate the separability for additional categories explored further down in dynamic analysis
 d.SwehVd.for.cat.separability <- d.SwehVd.forStudy.long.static %>% 
-  filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[iː]", "[ɪ]", "[yː]", "[ʏ]", "[ʉː]", "[eː]", "[ɛː]", "[æː]", "[øː]", "[œː]", "[ø]", "[œ]", "[oː]", "[ɔ]", "[uː]", "[ʊ]")) %>%
-  left_join(
-    d.SwehVd.forStudy.long.static %>% 
-      filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[iː]", "[ɪ]", "[yː]", "[ʏ]", "[ʉː]", "[eː]", "[ɛː]", "[æː]", "[øː]", "[œː]", "[ø]", "[œ]", "[oː]", "[ɔ]", "[uː]", "[ʊ]")) %>%
-      group_by(Talker, category) %>%
-      summarise(across(starts_with("F"), ~ mean(.x))) %>%
-      select(Talker, category, F1, F2, F3),
-    by = c("Talker", "category")) %>%
-  mutate(
-    F1 = F1.x,
-    F2 = F2.x,
-    F3 = F3.x,
-    F1_centroid = F1.y,
-    F2_centroid = F2.y,
-    F3_centroid = F3.y) %>%
-  select(-ends_with(c(".x", ".y"))) 
+  filter(Normalization.Type == "Nearey's uniform scaling (log)", category %in% c("[iː]", "[ɪ]", "[yː]", "[ʏ]", "[ʉː]", "[eː]", "[ɛː]", "[æː]", "[øː]", "[œː]", "[ø]", "[œ]", "[oː]", "[ɔ]", "[uː]", "[ʊ]"))
 
 d.SwehVd.cat.separability <- rbind(
   # Get category separability of i: from y:
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[iː]", category_B = "[yː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[iː]", category_B = "[yː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "iː to yː"),
   # and then y: from i:
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[yː]", category_B = "[iː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[yː]", category_B = "[iː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "yː to iː"),
-  d.SwehVd.for.cat.separability %>%
-    get_category_separability(category_A = "[yː]", category_B = "[ʉː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+    get_category_separability(category_A = "[yː]", category_B = "[ʉː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "yː to ʉː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[ʉː]", category_B = "[yː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[ʉː]", category_B = "[yː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "ʉː to yː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[eː]", category_B = "[yː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[eː]", category_B = "[yː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "eː to yː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[yː]", category_B = "[eː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[yː]", category_B = "[eː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "yː to eː"),
-  d.SwehVd.for.cat.separability %>%
-    get_category_separability(category_A = "[iː]", category_B = "[eː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+    get_category_separability(category_A = "[iː]", category_B = "[eː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "iː to eː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[eː]", category_B = "[iː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[eː]", category_B = "[iː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "eː to iː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[ɪ]", category_B = "[ʏ]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[ɪ]", category_B = "[ʏ]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "ɪ to ʏ"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[ʏ]", category_B = "[ɪ]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[ʏ]", category_B = "[ɪ]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "ʏ to ɪ"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[yː]", category_B = "[ʉː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[yː]", category_B = "[ʉː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "yː to ʉː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[ʉː]", category_B = "[yː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[ʉː]", category_B = "[yː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "ʉː to yː"),
-    d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[ɛː]", category_B = "[æː]") %>%
+    d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[ɛː]", category_B = "[æː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "ɛː to æː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[æː]", category_B = "[ɛː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[æː]", category_B = "[ɛː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "æː to ɛː"),
-  d.SwehVd.for.cat.separability %>%
-    get_category_separability(category_A = "[øː]", category_B = "[œː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+    get_category_separability(category_A = "[øː]", category_B = "[œː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "øː to œː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[œː]", category_B = "[øː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[œː]", category_B = "[øː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "œː to øː"),
-  d.SwehVd.for.cat.separability %>%
-    get_category_separability(category_A = "[ø]", category_B = "[œ]") %>%
+  d.SwehVd.forStudy.long.static %>%
+    get_category_separability(category_A = "[ø]", category_B = "[œ]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "ø to œ"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[œ]", category_B = "[ø]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[œ]", category_B = "[ø]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "œ to ø"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[oː]", category_B = "[uː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[oː]", category_B = "[uː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "oː to uː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[uː]", category_B = "[oː]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[uː]", category_B = "[oː]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "uː to oː"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[ɔ]", category_B = "[ʊ]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[ɔ]", category_B = "[ʊ]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "ɔ to ʊ"),
-  d.SwehVd.for.cat.separability %>%
-  get_category_separability(category_A = "[ʊ]", category_B = "[ɔ]") %>%
+  d.SwehVd.forStudy.long.static %>%
+  get_category_separability(category_A = "[ʊ]", category_B = "[ɔ]", data_means = d.SwehVd.centroids) %>%
     mutate(comparison = "ʊ to ɔ")) %>%
-  na.omit() %>%
   group_by(Talker, category, comparison) %>%
   summarise(
-    F1F2 = mean(separability_F1F2, na.rm = T),
-    F1F2F3 = mean(separability_F1F2F3, na.rm = T)) %>%
+    F1F2 = mean(category_separabilityF1F2, na.rm = T),
+    F1F2F3 = mean(category_separabilityF1F2F3, na.rm = T)) %>%
   pivot_longer(
     cols = starts_with("F"),
     names_to = "cue_dimension",
