--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -875,7 +875,7 @@ year = {2018}
 
 @article{stalhammar1973,
   title = {Contextual effects on vowel nuclei},
-  author = {St{\aa}lhammar, U. and Karlsson, I. and Fant, G.},
+  author = {St{\aa}lhammar, U. and Karlsson, I. and Fant, Gunnar},
   year = {1973},
   journal = {STL-QPSR},
   volume = {14},
